# voia-docs

./: .env.backup  .env.example  .env.migrated  .gitignore  .replit  .routes.py.2bnUkd-9GmB44RELkF8xH~  404.html  AI_MODEL_CONFIGURATION.md  BACKEND_REFACTORING_PLAN.md  BACKUP_RESTORE_GUIDE.md  BUG_1_AND_AWS_SES_DISPLAY_ANALYSIS.md  CHATGPT_TRANSLATION_PROMPT.txt  CLONE_DEPLOYMENT_GUIDE.md  CNAME  CONCURRENT_CAMPAIGNS_PHASE0_REPORT.md  CONCURRENT_CAMPAIGNS_PHASE1_REPORT.md  DEPLOYMENT_GUIDE_2025.md  DESIGN_DETERMINISTIC_SURVEY_V2.md  Dockerfile  EC2_DEPLOYMENT_GUIDE.md  ERROR_MONITORING_SETUP.md  FRENCH_TRANSLATION_GUIDE.md  FRONTEND_REFACTORING_PLAN.md  FULL_VOC_ROADMAP.md  IMPLEMENTATION_SUMMARY_V2.md  PARALLEL_CAMPAIGNS_ANALYSIS_NOV2025.md  PARALLEL_CAMPAIGNS_IMPLEMENTATION_PLAN.md  PHASE1_ASSESSMENT.md  PHASE_2B_IMPLEMENTATION_READY.md  PHASE_2B_PRE_IMPLEMENTATION.md  PLATFORM_CONFIG_IMPLEMENTATION_PLAN.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_LICENSE_DEPLOYMENT.md  PROGRESSIVE_ROLLOUT_STRATEGY.md  QUEUE_MIGRATION_ARCHITECTURE.md  QUEUE_MIGRATION_PRE_IMPLEMENTATION.md  QUICK_START.md  README.md  README_AUTOMATED_TRANSLATION.md  (+210 more)
.agents/: agent_assets_metadata.toml
attached_assets/: NPS_to_Organic_Growth_Lookup__SaaS_B2B__1751927682284.csv  Pasted--CONTEXT-USAGE-Use-the-following-context-to-pe-1763767432996_1763767432998.txt  Pasted--GATE-2-DASHBOARD-TABLE-HEADERS-LABELS-Entry-Criteria-Gate-1-passed-and-signed-off-Applicatio-1761349200226_1761349200226.txt  Pasted--type-extraction-prompt-YOUR-ROLE-nYou-are-extracting-f_1774061874526.txt  (+38 more)
(+323 files in other folders)
