[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-dance>=7.1.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "openai>=1.93.0",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.41",
    "textblob>=0.19.0",
    "werkzeug>=3.1.3",
    "flask-login>=0.6.3",
    "oauthlib>=3.3.1",
    "pyjwt>=2.10.1",
    "flask-cors>=6.0.1",
    "flask-wtf>=1.2.2",
    "cryptography>=45.0.7",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "matplotlib>=3.10.6",
    "jinja2>=3.1.6",
    "weasyprint>=66.0",
    "flask-compress>=1.18",
    "gevent>=25.9.1",
]
